--- a/frontend/naturewatch/index.html
+++ b/frontend/naturewatch/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+    <title>vite-vuetify-ts-starter</title>
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="app">
+      We're sorry but this site doesn't work properly without JavaScript
+      enabled. Please enable it to continue.
+    </div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
