--- a/frontend/naturewatch/index.html
+++ b/frontend/naturewatch/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
-    <title>vite-vuetify-ts-starter</title>
+    <title>Nature Watch</title>
   </head>
 
   <body>
